<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/toolbarRegistration"
        layout="@layout/snipped_top_registration_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegistration">


        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/name_label"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIUserFullName"
                android:drawableStart="@drawable/ic_baseline_person"
                android:drawablePadding="10dp"
                android:layout_height="50dp"
                android:layout_width="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/email_label"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tIUserEmail"
                android:drawableStart="@drawable/ic_baseline_email"
                android:drawablePadding="10dp"
                android:layout_height="50dp"
                android:layout_width="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnSaveUser"
            android:layout_margin="15dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:text="@string/sign_up_label" />



        <TextView
            android:id="@+id/tvInsertUserMessageError"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/error_message_insert_new_user"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>





    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrationProgressBar"
        android:visibility="gone"
        style="?android:progressBarStyleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>



