<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/homeCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:theme="@style/CustomToolbarTheme"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="bottom|start"
            app:expandedTitleMarginStart="5dp"
            app:collapsedTitleGravity="center_horizontal|center_vertical|center"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/someImage"
                android:text="@string/portfolio_balance_label"
                android:textColor="@color/light_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="65dp"
                android:layout_gravity="bottom|start"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="-1"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPortfolioBalance"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="none"
                android:layout_marginBottom="10dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"/>

            <ImageView
                android:id="@+id/ivNotifications"
                android:src="@drawable/ic_notification"
                app:layout_collapseMode="pin"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="20dp"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:layout_collapseParallaxMultiplier="1"
                />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarPortfolioBalance"
            style="?android:progressBarStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/watchlist_label"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/gray_100"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/watchlistRecyclerView"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/watchlistErrorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieAnim"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        app:lottie_fileName="error_animation.json"/>

                    <TextView
                        android:id="@+id/myId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lottieAnim"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:text="@string/error_requesting_data_label"
                        android:textColor="@color/gray"
                        android:textSize="16sp"/>

                </RelativeLayout>

                <ProgressBar
                    android:layout_marginTop="250dp"
                    android:id="@+id/progressBarWatchlist"
                    style="?android:progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/topMoversTitle"
                    android:textStyle="bold"
                    android:text="@string/top_movers_label"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topMoversRecyclerView"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>



            </LinearLayout>


            <RelativeLayout
                android:id="@+id/topMoversErrorLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimTop"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:lottie_fileName="error_cloud.json"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lottieAnimTop"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:text="@string/error_requesting_data_label"
                    android:textColor="@color/gray"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBarTopMovers"
                android:layout_marginTop="150dp"
                style="?android:progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/topStoriesTitle"
                    android:textStyle="bold"
                    android:text="@string/top_stories_label"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/gray_100"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topNewsRecyclerView"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


            <RelativeLayout
                android:id="@+id/newsErrorLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimNews"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:lottie_fileName="data_error.json"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lottieAnimNews"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:text="@string/error_requesting_data_label"
                    android:textColor="@color/gray"
                    android:textSize="16sp"/>

            </RelativeLayout>




            <ProgressBar
                android:id="@+id/progressBarNewsTopStories"
                android:layout_marginTop="250dp"
                style="?android:progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/moreStoriesLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="2dp"
                android:layout_marginBottom="40dp"
                android:focusable="true"
                android:clickable="true">

                <TextView
                    android:text="@string/more_stories_label"
                    android:id="@+id/tvMoreNews"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:src="@drawable/ic_baseline_arrow_forward"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintLeft_toRightOf="@id/tvMoreNews"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/gray_100"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>